--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-fastapi
-uvicorn
-pandas
-numpy
-scikit-learn
-joblib
-pyarrow
-gunicorn
-xgboost
-requests
-python-dotenv
+fastapi==0.110.0
+uvicorn==0.30.0
+pandas==2.0.3
+numpy==1.23.5
+scikit-learn==1.2.2
+joblib==1.2.0
+pyarrow==12.0.1
+gunicorn==20.1.0
+xgboost==1.7.3
+requests==2.31.0
+python-dotenv==1.0.0
+urllib3==1.26.18
